# collect

./: .gitignore  README.md  pyproject.toml
docs/: versions.md
src/collect/: __init__.py
src/collect/data/ripl/levels/: levels-param.data  levels-readme.html
src/collect/ripl/: __init__.py  discrete_levels.py
tests/: discrete_test.py  import_test.py
